--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0"
 	}
 }
