--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
-		"@supabase/supabase-js": "^2.32.0"
+		"@supabase/supabase-js": "^2.32.0",
+		"aes-js": "^3.1.2",
+		"crystals-kyber": "^5.1.0"
 	}
 }
