--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
 		"autoprefixer": "^10.4.14",
+		"daisyui": "^3.5.1",
 		"postcss": "^8.4.27",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
