--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
+		"@types/aes-js": "^3.1.1",
 		"aes-js": "^3.1.2",
-		"crystals-kyber": "^5.1.0"
+		"crystals-kyber": "^5.1.0",
+		"pbkdf2": "^3.1.2"
 	}
 }
