--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
 		"@types/aes-js": "^3.1.1",
+		"@types/pbkdf2": "^3.1.0",
 		"aes-js": "^3.1.2",
 		"crystals-kyber": "^5.1.0",
 		"pbkdf2": "^3.1.2"
