--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/pbkdf2": "^3.1.0",
 		"aes-js": "^3.1.2",
 		"crystals-kyber": "^5.1.0",
-		"pbkdf2": "^3.1.2"
+		"pbkdf2": "^3.1.2",
+		"sha256-uint8array": "^0.10.5"
 	}
 }
