--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/supabase-js": "^2.32.0",
+		"@sveltejs/adapter-static": "^2.0.3",
 		"@types/aes-js": "^3.1.1",
 		"@types/pbkdf2": "^3.1.0",
 		"@types/uuid": "^9.0.2",
