--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
+		"@types/fuzzysearch": "^1.0.0",
 		"autoprefixer": "^10.4.14",
 		"daisyui": "^3.5.1",
 		"postcss": "^8.4.27",
@@ -33,10 +34,13 @@
 		"@supabase/supabase-js": "^2.32.0",
 		"@sveltejs/adapter-static": "^2.0.3",
 		"@types/aes-js": "^3.1.1",
+		"@types/fuzzy-search": "^2.1.2",
 		"@types/pbkdf2": "^3.1.0",
 		"@types/uuid": "^9.0.2",
 		"aes-js": "^3.1.2",
 		"crystals-kyber": "^5.1.0",
+		"fuzzy-search": "^3.2.1",
+		"fuzzysearch": "^1.0.3",
 		"pbkdf2": "^3.1.2",
 		"sha256-uint8array": "^0.10.5",
 		"svelte-fa": "^3.0.4",
