--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.json --watch",
+    "postbuild": "npx ts-node-esm ./scripts/generate-sitemap.ts"
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
@@ -21,8 +22,9 @@
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
+    "typescript": "^5.1.6",
     "vite": "^4.4.2"
   },
   "type": "module",
@@ -33,6 +35,7 @@
     "@supabase/auth-helpers-sveltekit": "^0.10.2",
     "@supabase/supabase-js": "^2.32.0",
     "@sveltejs/adapter-static": "^2.0.3",
+    "@sveltejs/adapter-vercel": "^3.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/aes-js": "^3.1.1",
     "@types/fuzzy-search": "^2.1.2",
