--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig tsconfig.json --watch",
-    "postbuild": "npx ts-node-esm ./scripts/generate-sitemap.ts"
+    "prebuild": "npx ts-node-esm ./scripts/generate-sitemap.ts"
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
