--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/kit": "^1.20.4",
     "@types/cookie": "^0.5.1",
     "@types/fuzzysearch": "^1.0.0",
+    "@zerodevx/svelte-toast": "^0.9.5",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.5.1",
     "postcss": "^8.4.27",
@@ -49,6 +50,7 @@
     "pbkdf2": "^3.1.2",
     "sha256-uint8array": "^0.10.5",
     "svelte-fa": "^3.0.4",
+    "svelte-toasts": "^1.1.2",
     "uuid": "^9.0.0"
   }
 }
